[tool.poetry]
name = "lamd"
version = "0.1.3"
description = "Package for converting collection of markdown files and macros into talks and notes."
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
homepage = "https://github.com/lawrennd/lamd"
license = "MIT"
readme = "README.md"
include = [
{ path = "macros", format = ["sdist", "wheel"] },
{ path = "templates", format = ["sdist", "wheel"] },
{ path = "makefiles", format = ["sdist", "wheel"] },
{ path = "includes", format = ["sdist", "wheel"] },
{ path = "scripts", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
lynguine = { git = "https://github.com/lawrennd/lynguine.git", branch = "main" } # You might need to specify a version if the repository has tags.
python-frontmatter = "*"
pandas = "*"
python-liquid = "*"
notedown = "*"
referia = { git = "https://github.com/lawrennd/referia.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"
deepdiff = "^6.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
toml = ">=0.10.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
    
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Script entries
[tool.poetry.scripts]
mdpp = "lamd.mdpp:main"
flags = "lamd.flags:main"
dependencies = "lamd.dependencies:main"
mdfield = "lamd.mdfield:main"
maketalk = "lamd.maketalk:main"
makecv = "lamd.makecv:main"
mdlist = "lamd.mdlist:main"
mdpeople = "lamd.mdpeople:main"

# Optional dependencies
# [tool.poetry.extras]
# fancy-feature = ["django"]

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 127
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py: F401",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
